# HelloWorldCMake

./: CMakeLists.txt
hello-exe/: CMakeLists.txt  main.cpp
say-hello/: CMakeLists.txt
say-hello/src/say-hello/: hello.cpp  hello.hpp
src/: hello.cpp  main.cpp
